Fixed: OXUIB-255 - Formatting options in mail compose are not shown with Safari 13.1
Root cause: css based solution of "bottom-toolbar" not supported by safari (scrollbar overlap)
Solution: patch modern theme to support fixed-bottom-toolbar

--- a/ui/apps/io.ox/core/tk/contenteditable-editor.less
+++ b/ui/apps/io.ox/core/tk/contenteditable-editor.less
@@ -11,7 +11,9 @@
  * @author Richard Petersen <richard.petersen@open-xchange.com>
  */
 
-.editor .mce-tinymce, .mce-tinymce .mce-top-part::before {
+.editor .mce-tinymce,
+.tinymce-toolbar .mce-tinymce,
+.mce-tinymce .mce-top-part::before {
     box-shadow: none;
     -webkit-box-shadow: none;
 }
