--- a/ui/apps/io.ox/mail/settings/signatures/style.less
+++ b/ui/apps/io.ox/mail/settings/signatures/style.less
@@ -78,14 +78,14 @@ input.error { border-color: #b94a48; }
 
 .io-ox-signature-dialog {
 
-    .mce-top-part {
-        border: 1px solid #ccc;
-        border-top-color: transparent;
+    .contenteditable-editor {
+        margin-bottom: 0;
     }
 
-    // show toolbar after moving to bottom
-    .mce-top-part { display: none };
-    &.ready .mce-top-part { display: block; }
+    .mce-top-part {
+        border: 1px solid #ccc;
+        border-top: 0;
+    }
 
     .form-group {
         position: relative;
